Switch to linear filtering for video frames on Android.

Power measurements on N5 showed no change for 480p30 and 1080p60,
when scaling display size either to 480 or to 1080, when compared
to nearest neighbor.

BUG=591510

Review URL: https://codereview.chromium.org/1760103003

Cr-Commit-Position: refs/heads/master@{#379078}

Former-commit-id: 7c358317e9d2dd7827cd597ff81893b0549eba0f