content/common/gpu/media/android_copying_backing_strategy.cc
@@ -43,6 +43,8 @@ gfx::ScopedJavaSurface AndroidCopyingBackingStrategy::Initialize(
   glActiveTexture(GL_TEXTURE0);
   glBindTexture(GL_TEXTURE_EXTERNAL_OES, surface_texture_id_);
 
+  // Note that the target will be correctly sized, so nearest filtering is all
+  // that's needed.
   glTexParameteri(GL_TEXTURE_EXTERNAL_OES, GL_TEXTURE_MAG_FILTER, GL_NEAREST);
   glTexParameteri(GL_TEXTURE_EXTERNAL_OES, GL_TEXTURE_MIN_FILTER, GL_NEAREST);
   glTexParameteri(GL_TEXTURE_EXTERNAL_OES, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE);
