content/common/gpu/media/android_deferred_rendering_backing_strategy.cc
@@ -277,7 +277,9 @@ void AndroidDeferredRenderingBackingStrategy::CopySurfaceTextureToPictures(
   glGenTextures(1, &tmp_texture_id);
   {
     gfx::ScopedTextureBinder texture_binder(GL_TEXTURE_2D, tmp_texture_id);
-    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR);
+    // The target texture's size will exactly match the source.
+    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_NEAREST);
+    glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_NEAREST);
     glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE);
     glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_EDGE);
     glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA, size.width(), size.height(), 0,
